--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "standard": "^16.0.3"
   },
   "eslintConfig": {
-    "extends": "./node_modules/standard/eslintrc.json"
+    "extends": "./node_modules/standard/eslintrc.json",
+    "rules": {
+      "space-before-function-paren": "off"
+    }
   }
 }
